# 5thD

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_ios.txt  LICENSE  README.md  cpp_operations_efficiency_cheat_sheet.md  info.plist  main.cpp  main_srv.cpp  sofipns_desing.md
5thD_Peer/: CMakeLists.txt  peer.cpp  peer_module.cpp
5thD_Peer/core/inc/: keys.h  peer.h
5thD_Peer/core/src/: keys.cpp  peer.cpp
5thD_Software_Bus/: CMakeLists.txt  soft_bus.cpp
5thD_Software_Bus/core/inc/: software_bus.h
5thD_Software_Bus/core/src/: software_bus.cpp
5thD_Test/: CMakeLists.txt
5thD_Test/test_izmq/: CMakeLists.txt  test_all.cpp
5thD_Test/test_proc/: CMakeLists.txt  test_all.cpp
5thD_Test/test_receiver/: CMakeLists.txt  test_all.cpp
5thD_Test/test_transmitter/: CMakeLists.txt  test_all.cpp
5thdTest/: 5thD  CMakeLists.txt  test_all.cpp
cmake/: ios.toolchain.cmake  win.toolchain.cmake
core/: 5thdallocator.cpp  5thderror_handler.cpp  5thderror_handler.h  5thderrors.h  5thdipc_client.cpp  5thdipc_client.h  5thdipcmsg.c  5thdipcmsg.h  5thdlogger.cpp  5thdlru_cache.h  5thdmsg.h  5thdsql.cpp  5thdtask.h  iproc_manager.h  izmq.cpp  izmq.h  keys_db.cpp  keysinc_file.cpp  keysinc_file.h  module.cpp  net_helpers.cpp  proc_unix.h  proc_win.h  receiver.cpp  receiver.h  thread_pool.cpp  transmitter.cpp  transmitter.h
core/common/: 5htdbuffer.h  5thdallocator.h  5thdassert.h  5thdbuffer.h  5thderror_handler.h  5thdipc_client.h  5thdipcmsg.h  5thdlogger.h  5thdsql.h  5thdtracy.h  izmq.h  keys_db.h  module.h  net_helpers.h  qwistys_macro.h  receiver.h  transmitter.h
core/inc/: context.h  error_handler.h  errors.h  lggr.h  logger.h  peer.h  peer_conn.h  qwistys_macro.h  thread_pool.h  transmitter.h
core/peer/inc/: connection.h  izmq.h  keys.h  net_helpers.h  peer.h  protocol.h  receiver.h  transmitter.h
core/peer/src/: izmq.cpp  keys.cpp  net_helpers.cpp  peer.cpp  receiver.cpp  transmitter.cpp
core/peer/src/5thDMac/5thD/5thD/: ContentView.swift  _thDApp.swift
core/peer/src/5thDMac/5thD/5thD.xcodeproj/: project.pbxproj
core/peer/src/5thDMac/5thD/5thDTests/: _thDTests.swift
core/peer/src/5thDMac/5thD/5thDUITests/: _thDUITests.swift  _thDUITestsLaunchTests.swift
core/src/: cntx.cpp  context.cpp  error_handler.cpp  lggr.cpp  peer.cpp  thread_pool.cpp  transmitter.cpp
db_scripts/: table_keys.sql
docs/: 5thderrors.md  5thdierror.md  architecture.md  module_contract.md  telemetry.md  template.md
docs/peer/: itransmitercontext.md  itransmitter.md  transmitter.md  transmitter_ctor.md
third_parties/: build_libzmq.sh  build_spdlog.sh  build_sqlcipher.sh
